# archivator

./: CMakeLists.txt  README.md  main.cpp
src/compressor/: CMakeLists.txt  compressor.cpp  compressor.hpp  main.cpp
src/decompressor/: CMakeLists.txt  decompressor.cpp  decompressor.hpp  main.cpp
